--- a/index.html
+++ b/index.html
@@ -9,5 +9,15 @@
   </head>
   <body>
       <h1>A Factory of People</h1>
+      <section>
+        <div>
+          <form>
+            <p>
+              <label for="personName">Name</label>
+              <input type="text", name="personName">
+            </p>
+          </form>
+        </div>
+      </section>
   </body>
 </html>
