--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
         <div>
           <form id="personForm">
             <p>
-              <label for="personName">Name</label>
-              <input type="text", name="personName">
+              <label for="personName">Your Name:</label>
+              <input type="text", name="yourName">
+            </p>
+            <p>
+              <label for="personName">Friend's Name:</label>
+              <input type="text", name="friendName">
             </p>
             <p>
               <button type="submit">Go</button>
