--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
               <button type="submit">Go</button>
             </p>
           </form>
+          <p>
+            <label for="">This is the Empty Paragraph</label>
+          </p>
         </div>
       </section>
       <script src="index.js"></script>
