--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
               <input type="text", name="yourName">
             </p>
             <p>
-              <label for="personName">Friend's Name:</label>
-              <input type="text", name="friendName">
+              <label for="personName">Movie Title:</label>
+              <input type="text", name="movieName">
             </p>
             <p>
-              <button type="submit">Go</button>
+              <button type="submit">Submit</button>
             </p>
           </form>
           <p>
-            <label for="">This is the Empty Paragraph</label>
+            <center>
+              <h2></h2>
+            </center>
           </p>
         </div>
       </section>
