Finish Super Mega Bonus & Hyper Fighting Credit

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
           </form>
           <p>
             <center>
+              <img src=""/>
               <h2></h2>
+              <font color="black"></font>
             </center>
           </p>
         </div>
