--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-      <h1>A Factory of People</h1>
+      <center>
+        <h1>A Factory of People</h1>
+      </center>
       <section>
         <div>
+          <center>
           <form id="personForm">
             <p>
               <label for="personName">Your Name:</label>
@@ -24,6 +27,7 @@
               <button type="submit">Submit</button>
             </p>
           </form>
+          </center>
           <p>
             <center>
               <img src=""/>
@@ -32,6 +36,7 @@
             </center>
           </p>
         </div>
+        <div id="details"></div>
       </section>
       <script src="index.js"></script>
   </body>
